# structured-agentic-coding

./: .gitignore  README.md  package.json
.claude-plugin/: marketplace.json
.claude/commands/: init-agentic.md
.claude/scaffold/: README.md
.github/workflows/: publish.yml  release.yml
docs/: variables-schema.md
docs/masterplans/: nestjs-refine-profiles.md
docs/reports/: sps-scaffold-dry-run.md
docs/research/: 01-tree-sitter-and-code-graphs.md  02-multi-agent-shogun-patterns.md  03-aris-autonomous-research.md  04-claude-code-best-practices.md  05-multi-agent-parallel-worktrees.md  06-containerized-agent-development.md  07-llm-agentic-coding-papers.md  08-ai-code-review-systems.md  09-context-engineering-and-memory.md  10-improvement-proposals.md  11-scheduled-deferred-agents.md  12-roadmap-proposal.md
init-agentic-plugin/.claude-plugin/: plugin.json
init-agentic-plugin/scripts/: scaffold.sh
scripts/: release.sh
structured-agentic-coding-plugin/: CHANGELOG.md
structured-agentic-coding-plugin/graph-server/: pyproject.toml
structured-agentic-coding-plugin/graph-server/sac_graph/: __init__.py  cli.py  graph.py  indexer.py  languages.py  parser.py
structured-agentic-coding-plugin/graph-server/sac_graph/tools/: __init__.py  blast_radius.py  changes_since.py  dependencies.py  dependents.py  find_symbol.py  module_summary.py  test_coverage.py
structured-agentic-coding-plugin/graph-server/tests/: conftest.py  test_cli.py  test_e2e.py  test_graph.py  test_indexer.py  test_parser.py  test_tools.py
structured-agentic-coding-plugin/hooks/: hooks.json
(+270 files in other folders)
