[project]
name = "sac-graph-server"
version = "0.2.0"
description = "Tree-sitter code graph CLI for structured-agentic-coding"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter-language-pack>=0.7",
    "networkx>=3.0",
]

[project.scripts]
sac-graph = "sac_graph.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sac_graph"]
